--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>practice makes a man perfect</h1>
     <h3>now i can push alhamdulilah</h3>
+    <p>feeling determind</p>
+    <p>need your help</p>
 </body>
 </html>
